--- a/Halloween.mw
+++ b/Halloween.mw
@@ -9,7 +9,7 @@ De [[germanen]] (nåbüürs van de kelten) hadden ouk een feest, dee se vyrden r
 ===Middeleywen===
 In christelike tyd wördden et keltiske feest ümmeförmd når een feest med wat meyr christelike inhold. Et katolike ''Allerselen'' kümt uut de benediktyner kloostertradity van [[Cluny]], Frankryk, wår as [[Odilo van Cluny]] et in 998 vöär et eyrste mål vyren löät. In de 13. eywe kreygen et de name Allerselen. Mar de olde elementen van et Samhainfeest, dee bewård bleyvden by et burenvolk van Yrland, wördden an dissen dag eplakked. Samhain is een feest ümme de douden te earen, de vöärolder in gedachten te holden. So ouk Allerselen, dee up 2 november is. Vöär Allerselen kwamt ''Allerheiligen'', een dag speciål vöär de christelike heiligen en martelaars. De åvend in vöärend (31 oktober) wördet de vöärbereidings edåne van disse dagen, in et engelsk is et ''All Hallows' Eve(ning)'' of Halloween enöömd.
 
-Vanuut et middeleywske volksgelöyv wördt der altyd esegd dat up disse åvend de heksen by mekare kumt. Een ''heksensabbat'' wördt dat enöömd. Dee heksen kwamen by mekare ümme te töyveren en kwåde sprökken uut te sprekken. [[Cailleach]] was in de keltiske wearld so ne heksenwyv dee in nen kettel röörden ümme leaven en doud te bepålen.
+Vanuut et middeleywske volksgelöyv wördt der altyd esegd dat up disse åvend de heksen by mekare kummet. Een ''heksensabbat'' wördt dat enöömd. Dee heksen kwamen by mekare ümme te töyveren en kwåde sprökken uut te sprekken. [[Cailleach]] was in de keltiske wearld so ne heksenwyv dee in nen kettel röörden ümme leaven en doud te bepålen.
 
 ===Kolonisten===
 Nå de [[Reformaty]] kwamen Allerheiligen en Allerselen (Halloween) in Engeland lös van de karke te stån, en wördden et (wearümme) een volksfeest. Yrske en engelske kolonisten güngen in de 20. eywe når Amerika, ümme dår een ny bestån hoapen te krygen, en namen ear gebruken en traditys med. Dår is et der wat an veranderd en töt nu an to uutegröid töt een wyd evyrden feestdag. Et wördden ouk meyr een kinderfeest.
