--- a/Caspar_David_Friedrich.mw
+++ b/Caspar_David_Friedrich.mw
@@ -1,12 +1,12 @@
 '''Caspar David Friedrich'''  ([[Greifswald]], 5 september 1774 – [[Dresden]], 7 mei 1840) was een düütske [[künstskilder]] en [[tekenaar]]. 
 
-Hy wörd up-edeyld by de [[Romantiek (stroming)|Romantik]], een strouming uut begün 19. eywe. Ümdat he in syn skilderyen de natuur as med gevööl en as godachtig ofbeyldrn. Wår vöärhen de natuur allenne mar as dekor gebruked wördden van de 'belangrykere' menskelike beasigheyden. Friedrich was een [[Kristendom|deepgelöyvigen]] kearl en so beyldden he syn landskappen ouk of: as dé uuting van goddelike groutsheid en de menske dee der mar klein in steyt. Hy was wys med mystik en et rådsel van et leaven. Hy beyldden dan ouk vake dinge of as krüsen op hoche bargen, olde karkruïnes en [[hunebed|hünebedden]].
+Hy wörd up-edeyled by de [[Romantiek (stroming)|Romantik]], een strouming uut begün 19. eywe. Ümdat hee in syn skilderyen de natuur as med gevööl en as godachtig ofbealden. Wår vöärhen de natuur alleyne mar as dekor gebruked wördden van de 'belangrykere' menskelike beasigheyden. Friedrich was een [[Kristendom|deepgelöyvigen]] kearl en so bealden hee syn landskappen ouk of: as dé uuting van goddelike groutsheid en de menske dee der mar klein in steyt. Hy was wys med mystik en et rådsel van et leaven. Hy bealeden dan ouk vake dinge of as krüsen up houge bargen, olde karkruïnes en [[hunebed|hünebedden]].
 
-Friedrich is, nåst [[William Turner]], de belangrykste landskapskilder van de Romantik. Hy skilderden de natuur so as et vöär hüm stünden en kombinearden dat med goddelike betekkenisse, wat hy der in vöölden.
+Friedrich is, nåst [[William Turner]], de belangrykste landskapskilder van de Romantik. Hy skilderden de natuur so as et vöär hüm stünden en kombineyrden dat med goddelike beteakenisse, wat hy der in vöölden.
 
-'' Een skilder müt neet allenne skilderen wat he vöär sich söt, mar jüüste ouk wat he ín sichsülve söt.''
+'' Een skilder müt neet alleyne skilderen wat hee vöär sich söt, mar jüüste ouk wat hee ín sichsülve söt.''
 
-Med uutspråken as disse löyt he seen dat he al een set vöärlöypen up vöäle moderne künstenaars. Want vöär ear is et innerlik een belangryke leydråd in et maken van ear gekünstel. 
+Med uutspråken as disse löyt hee seen dat hee al een set vöärlöypen up vöäle moderne künstenaars. Want vöär ear is et innerlik een belangryke leidråd in et maken van ear gekünstel. 
 
 
 
