--- a/Juul.mw
+++ b/Juul.mw
@@ -4,6 +4,53 @@
 
 Der is neet so verskrikkelik vöäle van wys uut de germaanske oldheid, mar vandage an den dag beståt der nog unmundig vöäle gebruken rund disse tyd. Wår as düdelik later een beatyn verchristelikt is. Et karstfeest hevt in de christelike tyd et heidenske juulfeest oaver enöämen. Der wörd nu ouk wal espröäken van ''de twaalv dage van karst'': dat geyt van eyrsten karstdag (25 december) töt [[Dreekeuningen|Dree-Köningen]] (6 januari).
 
+==Grunddachtenisse==
+Geyneyne weat precys wår as et syn eyrste förm had, mar wårskynlik geyt et al wal düsenden jåren terügge en uut verskillende traditys ekummen. Et is in te denken dat, vöäral in de meyst noordske landen, de winters slim düüster en kold waren. Vroager waren sy vöäl [[Animisme|animistisk]] en [[Sjamanisme|sjamanistisk]] kwå wearldbekyk. Dat beteakend dat sy gelöyveden dat alles in de wearld een geyst of een leavenskracht had. Sjamanen waren de mensken dee as med disse geysten en krachten oaverweg könden. Der wörden gelöyved dat wanneyr as de bladergyns van de boumen vöylen en de deren vordtröyken, dat disse leavenskrachten uut de natuur tröyk. En dår reageyreden sy up döär disse leavenskrachten wearümme probeyren te krygen. So dat de plantyns wear gröiet en de sünne wearümme sol kummen. Nu bint der oaver heyl Europa en up vöäle andere steades up de wearld gebruken, dee te maken hebbet med et wearümme krygen van de vrüchtbaarheid. Net as by et keltiske [[Samhain]] wördden der edachted dat in disse düüsternisse van de winter de lyne med de andere wearlden kört was. Kwåde geysten en krachten künden in unse wearld kummen, mar ouk estürven vöärolder. De sünne is heyl noordelik sülvs vöär wat dage vord, wat lüde bange makeden dat y neet meyr terügge sol kummen. Noormannen vertelleden mekander dat der een unmundige wulv de sünne achterhean sat, en tydens juul sol hee hüm te pakken hebben.
+
+==Uutvoring==
+===Kenmarken===
+As y de old-germanist [[Jan de Vries]] vrågend, bint de belangrykste kenmarken van et Juulfeest et volgende:
+* De tyd van twaalv nachten is een oavergangstyd;
+* In disse tyd kummet de oaverleaden vöärolders wearümme (Wilde Jacht), en dårmed bint kultusfeesten en jungensbunden an verbünden;
+* et uutmaken van et olde vüür en et ansteaken van et nye vüür;
+* inwydingsfeesten;
+* gevechte tüsken twey gruppen (summer en winter);
+* vrypartyen
+* sociale reagels bint tydelik of eskavved.
+
+==Algemeen==
+Elk jår up [[old en ny]] gåt lüde in Europa kabaal maken med vüürwark en karbit sketen. Vüürwark müt mooi weasen en karbit müt hard knappen. Et karbit sketen is een oust-neaderlandsk gebruuk, wat ouk in wat deylen in Düütskland geböäret. [[Mirreweenterhoorn|Midwinterhoarnblåsen]] wörd üm desülvde reyden (van vroager uut) ouk edåne. Want al disse förmen hebbet in disse tyd et dool ümme et kwåd vord te jagen en de sünne wearümme te ropen. Lös dårvan had de midwinterhoarn ouk deenst as berichten oaver verre te doon.
+
+In heyl Europa vind y rund disse tyd traditys, wår is lüde sich med root up den kop smearet. So wörden sy neet meyr herkent. In de Alpen heb y de krampussen, dee as med hoarns up den kop en groute bellen up de rügge de buul unveilig maket. In Düütskland heb y Knecht Ruprecht den nöäst Sankt Niklas löpt, as hülpyn. Den hevt een swarten kop, een lange jasse an en een rode in de handen. In Neaderland heb y Sünterklås en syn swarte peten. En so bint der noch meyr van disse soortgelyke gebruken.
+
+In de oldheid, tydens de dunkerste dage van et jår, smeareden jungelingen hümsülv den kop swart med root en aske. Want dat beylden de douden uut, dee as rundwaren in dee tyd. So waren sy neet te herkennen as leavende lüde. Sy döäden dan derenhüden ümme en hoarns of geweien op den kop. In disse vermumming en drunkenskap raasden sy döär de busken en de gouwen hean. Maakten vöäl kabaal med hoarn bloazen, kettens en bellen, ümme so de kwåde krachten up ofstand te holden. Sy smearden sy junge dearntyns under et root en aske, ümme ear vrüchtbaarheyd te geaven, en via ear de grund.
+
+In latere verhalen bint disse lüde noch ehöägend as ''[[De Wilde Jacht]]''.
+
+In olde tyden wördden up de körtsten dag een [[Boake|grout ritueel vüür]] estöäken. Van disse båke güngen der når elk hüsyn een vüürtyn hean, ümme de kachel der med an te krygen. Disse vüren mosden al de twaalv nachten an eholden wörden. Anders had y unheil oaver u hean ehaled.
+
+In disse kolde dage kummet lüde by mekare ümme mekare geselskop te holden. Eigenlik is disse tyd ouk een vakanty. Sy bint an ewarked med et binnenhalen van de ougst, alles steyt klår vöär de kummende tyd. Düs nöymen sy der mar van: lekker eaten en supen gån. Teagenwoordig hevt et karstfeest dan ouk de beteakenisse ekreygen van by mekare kummen en lekker eaten. Nå mekare ümme kyken in disse tyd is noch belangryker dan anders. In de germaanske oldheid had y groute suupfeesten. Der wördden twaalv nachte lange alleyne mar edansed, esöypen en evryen by groute vüren. Sy offereden eaverswynen an den god Freyr, ümme et vervolgens up te eaten.
+
+==Symbolik==
+Et burenvolk had van vöärend al syn ougst binnen ehaled, et vleisk in esolted en de deakentyns ebreied. Sy mosden de winter mar döär seen te kummen. Ümdat et kold en nat is buten, was et logisk dat sy binnen et was geselliger maakten. Med lichtyns en dennentakken. Want dennentakken blyvet et heyle jår gröön, en dat düt in de kolde dage u der an höägen dat et ooit wear gröön buten wörd. Et licht düt u höagen når de warmte van de sünne in et [[sumer|summer]]. Tydens disse twaalv dage wördden der dan ouk vöäl groute vüren an estöäken, en de heyle tyd verdan an-eholden. Want solange as den sünne neet skent, dan mütte wy et sülv mar doon. Nu noch wörd der in de noordske landen ''juulblokken'' ehakked en de heyle karsttyd up-estoaked. In de westerske landen heb y noch ait vöäle midwintervüren. In latere tyden güngen lüde dennenboumen in et huus halen. Ümdat dissend ait gröön bint en düt denken an den [[Yggdrasil|leavensboum]]. Dissend wörd noch ait in et huus etröyken en med gekleurde ballen en lichtyns up emooid. Vandage an den dag nöme wy dat een [[karstboum]].
+
+==Vergelykings med andere traditys==
+Vöäle van disse dachtenissen, gebruken en symbolen bint up vöäle steades up de wearld te vinden. En in et juulfeest heb y ouk verskillende traditys by mekare, so as wårskynlik elk feest en tradity uutendelik een mengelmoos is van verskillende dinge. As y byvöärbeeld kykt når de kearls dee as elk midwinter med derenhüden en hoarns up den kop rundzwarvet; dår bint al grotskilderings van bekend, dee stammet uut wat düsenden jåren eleaden. Vandage an den dag geböärt et noch, kyk mar når de [[Krampus|krampussen]] in de Alpen (Oustenryk) en de Swarte Peten in Neaderland. De greekske god Pan was een god den oaver de wilde deren heyrsten, en sag der uut as een halv menske, halv bok. So ouk de keltisken god Cernunnos, god van et wold, wilde deren en vrüchtbaarheid by kearls. Hy had een hertengewei up den kop.
+
+Groute vüren ansteaken dat geböärt sowal in de winter as in et vöärjår, oaver heyl Europa. 
+
+===karst===
+Karst is noch wal et beste vöärbeyld van verskillende traditys dee as eyne feest wördden. Ümdat et midwinterfeest so slim in de west- en noordeuropeanen sat, kon de karke dissen neet ofskavven. Wat se döäden was kyken når gelykende ideyen tüsken de heidenen en de christenen. Jesus is jår et licht wat in de düüsternisse kwamt, so as unse vöärolders de sünne wearümme in de düüsternisse hebben wolden. De unwyse jungevolk, dee verkleed güngen as krygers en douden, wördden döär den heiligen Sint Nicolaos etemmed. En verwördden töt düvelske weasens dee döär ekettend bint. Et hoarn blåsen döyd y nu ümme et Christuskind te verwelkummen. Sülvs de karstboum wörd een verwysing når de Dree-eynheid, döär syn dreehokige förm.
+
+==Germaanske kearlsbunden==
+De germanen hadden in ear gemeynskappen ouk kearlsbunden. Dissen bestünden uut junge kearltyns dee as up vroage leavtyd der vöär eköäsen hebbet ümme ear leaven der an te wyden. So een gruup was ewyd an den krygers- en doudsgod [[Woden]] (noordsk: Odin). Mar Woden was sowal den god van de krygers as van de wysheid, dichterye en de drunkenskap. (Vergelyk [[Dionysus]]). As so een gruup in trance wolden kummen, dan söypen se machtig vöäle beer of namen bepålde krüden en paddestolen. En künneden sy as van unwys tekeyr gån in de stryd. ''Tekeyr gån as een beyst''; dat is wal een gode bedüding dårvöär, want disse lüde kleydeden sich vake in hüden van bearen en eaverswynen. Se stelleden sich dan ouk vöär dat sy dat beyst echt waren. So as de wyking[[beserkers]]. Disse kearlsbunden waren elite-krygers. Mar ouk mosden sy samenwarken med sjamamen vöär rituelen. 
+
+Tydens de dunkerste dage van et jår smeareden sy hümsülv den kop swart med root en aske. Want dat beylden de douden uut, dee as rundwaren in dee tyd. So waren sy neet te herkennen as leavende lüde. In disse vermumming en drunkenskap raasden sy döär de busken en de gouwen hean. Maakten vöäl kabaal med hoarn bloazen, kettens en bellen, ümme so de kwåde krachten up ofstand te holden. Sy smearden sy junge dearntyns under et root en aske, ümme ear vrüchtbaarheyd te geaven, en via ear de grund.
+
+In latere verhalen bint disse lüde noch ehöägend as ''[[De Wilde Jacht]]''.
+
+
+==Woordherkumts==
 
 {{Dialekt|sdz}}
 
