--- a/Connecticut.mw
+++ b/Connecticut.mw
@@ -1,24 +1,24 @@
-{{Sy dv|Sy [[Connecticut (düürverwyssyde)]] vöär andere beteykenissen van Connecticut.}}
+{{Zie dv|Sy [[Connecticut (düürverwyssyde)]] vöär andere beteykenissen van Connecticut.}}
 {{Amerikaanse staot
 | naam = State of Connecticut
-| biejnaom = ''The Constitution State''
+| biejnoam = ''The Constitution State''
 * ''The Nutmeg State''
 * ''The Provisions State''
 * ''The Land of Steady Habits''
 | vlagge = [[Bestaand:Flag of Connecticut.svg|125x100px|Vlagge van Connecticut]]
-| waopen = [[Bestaand:Seal of Connecticut.svg|75x100px|Wåpen van Connecticut]]
+| wapen = [[Bestaand:Seal of Connecticut.svg|75x100px|Wåpen van Connecticut]]
 | kaorte = Map of USA CT.svg
 | heufdstad = [[Hartford (Connecticut)|Hartford]]
-| oppervlak land = 14,357
-| oppervlak waoter = 12.6%
-| inwoeners = 3,574,097 (2010)
-| dichtheid = 271.40
-| tiedzone = Oost: UTC-5/-4
+| oppervlak laand = 14 357
+| oppervlak waoter = 12,6%
+| inwoeners = 3 574 097 (2010)
+| dichtheid = 271,40
+| tiedzone = Oost: UTC−5/−4
 | antal graafschappen = 8
 | ofkorting = CT
-| Toe-etrejen = 9 january 1788
+| toe-etrejen = 9 january 1788
 }}
-'''Connecticut''' is nen ståt in de [[Verynigde Staoten van Amerika|Vereynigde Ståten van Amerika]]. Et is ouk eyne van de ståten van [[New England]], et uuterste noordousten van de VS. Et grenst an [[Rhode Island (ståt)|Rhode Island]] in et ousten, [[Massachüssetts (ståt)|Massachüssetts]] in et noorden en [[Nyj York (ståt)|Nyjork]] in et westen en süden (in et süden alleane oaver de sey med [[Long Island]]).
+'''Connecticut''' is nen ståt in de [[Verienigde Staoten van Amerika|Vereynigde Ståten van Amerika]]. Et is ouk eyne van de ståten van [[New England]], et uuterste noordousten van de VS. Et grenst an [[Rhode Island]] in et ousten, [[Massachusetts]] in et noorden en [[Nyjork (ståt)|Nyjork]] in et westen en süden (in et süden alleane oaver de sey med [[Long Island]]).
 
 == Name ==
 De name kümt van de [[Connecticut (rivyr)|Connecticut-rivyr]] den as den ståt souwat döärmidden skeidet. Et deyl op et westen van de rivyr höyrt by et verstädelikte gebeed van de stad [[Nyjork]], et deyl op et oosten an höyrt by et meyr landelike gebeed van New England.
@@ -28,10 +28,10 @@ De name kümt van de [[Connecticut (rivyr)|Connecticut-rivyr]] den as den ståt 
 Connecticut wördt in et ousten, noorden en westen döär land begrensd, en in et süden is [[Long Island Sound]], ne sey-inham, de uterlike grens van den ståt. De höyvdstad van den ståt is [[Hartford (Connecticut)|Hartford]], en andere belangryke städen sint [[Brigdeport (Connecticut)|Bridgeport]], [[New Haven (Connecticut)|New Haven]], [[Stamford (Connecticut)|Stamford]], [[Waterbury (Connecticut)|Waterbury]], [[Norwalk (Connecticut)|Norwalk]], [[Danbury (Connecticut)|Danbury]], [[New Britain (Connecticut)|New Britain]] en [[Bristol (Connecticut)|Bristol]]. Connecticut hevt 169 städen.
 
 === Landskap ===
-[[Bestand:Approaching Sümmit Again.JPG|thümb|left|175px|Beyr Mountain, et höygste pünt]]
-Den höygsten barg is [[Beyr Mountain (Connecticut)|Beyr Mountain]] in [[Salisbüry (Connecticut)|Salisbüry]] in de noordwestelike pünte van den ståt. Et höygste pünt is wår de dree ståten Connecticut, [[Massachüssetts (ståt)|Massachüssetts]] en [[Nyjork (ståt)|Nyjork]] samenkummet (42° 3' N; 73° 29' W) op de südelike helling van [[Mount Frissell]], wårvan de bargpünte net in Massachussetts ligt.
+[[Bestaand:Approaching Summit Again.JPG|thumb|left|175px|Beyr Mountain, et höygste pünt]]
+Den höygsten barg is [[Beyr Mountain (Connecticut)|Beyr Mountain]] in [[Salisbüry (Connecticut)|Salisbüry]] in de noordwestelike pünte van den ståt. Et höygste pünt is wår de dree ståten Connecticut, [[Massachusetts]] en [[Nyjork (ståt)|Nyjork]] samenkummet (42° 3' N; 73° 29' W) op de südelike helling van [[Mount Frissell]], wårvan de bargpünte net in Massachusetts ligt.
 
-[[Bestand:Highest Point here.JPG|thümb|left|175px|t Höygste pünt [[Mount Frissell]] vanaf Beyr Mountain.]]
+[[Bestaand:Highest Point here.JPG|thumb|left|175px|t Höygste pünt [[Mount Frissell]] vanaf Beyr Mountain.]]
 De rivyr [[Connecticut (rivyr)|Connecticut]] ströymt dwars döär et midden van den ståt nå Long Island Sound. Et dichtstbevölkede gebeed is ouk et [[Connecticutrivyrdal]]. Ündanks dat Connecticut klein is wat et uppervlak angeyt, hevt et en grout skala an verskillende landskappen. Sou gevt et in et noordwesten de [[Litchfield-höävels]] med bargen en paerdebüürderyen, terwyl as [[New London County]] vöäral ründ et strand en de sey leavt.
 
 Undanks dat Connecticut bekend steyt as nen ståt med ne lange seygeskydenisse en ne reputaty dår up baseerd, is der ginne rechtstreykse verbinding med de lösse sey. De regeyring van den ståt Nyjork löpt an et eande van Long Island wyder oaver Long Island Sound, wår et med [[Rhode Island]] ne grense förmt. Düs undanks dat Connecticut ne rechtstreykse verbinding nå de sey hevt, is der ginne oceaanküste.
@@ -42,10 +42,10 @@ De wolden in et gebeed sint [[gemengd bos|gemengd]].
 
 === Grensen ===
 ==== Southwick Jog ====
-[[Bestand:Southwick ma highlight.png|thümb|left|200px|De ''Southwick Jog'' roud angeaven.]]
-De noordelike grense med Massachüssetts wördt kenmarked döär de sounöömde [[Southwick Jog]]. Hyr wördt en klein stüksken uut Connecticut "happed". Et uutsteksel küm uuteandelik by Connecticut nå jårenlange disterye oaver wee as tohöyrden. In 1804 wör beslöäten dat et süden van Southwick by Connecticut must höyren en et andere deyl by Massachüssetts.
+[[Bestaand:Southwick ma highlight.png|thumb|left|200px|De ''Southwick Jog'' roud angeaven.]]
+De noordelike grense med Massachusetts wördt kenmarked döär de sounöömde [[Southwick Jog]]. Hyr wördt en klein stüksken uut Connecticut "happed". Et uutsteksel küm uuteandelik by Connecticut nå jårenlange disterye oaver wee as tohöyrden. In 1804 wör beslöäten dat et süden van Southwick by Connecticut must höyren en et andere deyl by Massachusetts.
 ==== Connecticut ''Panhandle'' ====
-In et süüdweasten is noch en kenmarkend üütsteaksel, ne [[panhandle]]. dat steakt by [[Fairfield County (Connecticut)|Fairfield County]] den ståt Nyjork in. Dissen unregelmåtigheid is te danken an disterye oaver land in et 17. jårhunderd. Uuteandelik hevt Nyjork et opgeaven ümdat de inwoaners lever by Connecticut wolden höyren. Nyjork kreag as ruil et lange stükke land van de panhandle, up de grense med Massachüssetts.
+In et süüdweasten is noch en kenmarkend üütsteaksel, ne [[panhandle]]. dat steakt by [[Fairfield County (Connecticut)|Fairfield County]] den ståt Nyjork in. Dissen unregelmåtigheid is te danken an disterye oaver land in et 17. jårhunderd. Uuteandelik hevt Nyjork et opgeaven ümdat de inwoaners lever by Connecticut wolden höyren. Nyjork kreag as ruil et lange stükke land van de panhandle, up de grense med Massachusetts.
 
 In de panhandle sint de plaatsen [[Greenwich (Connecticut)|Greenwich]], [[Stamford (Connecticut)|Stamford]], [[New Canan (Connecticut)|New Canan]], [[Daryn (Connecticut)|Daryn]] en en deyl van [[Norwalk (Connecticut)|Norwalk]].
 
@@ -56,53 +56,41 @@ De winters künnet kold enöömd worden, med ne döärsneyde wöärmde van -1 °
 
 Den summerdag kummet de meyste dunderskuurs vöär; der sint in döärsneyde 30 et jår. Ouk krigt den ståt in döärsneyde eynen [[warvelwind]] in et jår üm de ouren.
 {| class="wikitable" "text-align:center;font-sise:90%;"|
-| colspan="13" style="text-align:center;font-sise:120%;background:#E8EAFA;"|Måndelikse höygste en döärsneyde temperature in twey städen (in °F).
-|-
-! style="background:#e5afaa; color:#000; height:17px;"| Stad
-! style="background:#e5afaa; color:#000;"| Jan
-! style="background:#e5afaa; color:#000;"| Feb
-! style="background:#e5afaa; color:#000;"| Mar
-! style="background:#e5afaa; color:#000;"| Apr
-! style="background:#e5afaa; color:#000;"| Mei
-! style="background:#e5afaa; color:#000;"| Jun
-! style="background:#e5afaa; color:#000;"| Jul
-! style="background:#e5afaa; color:#000;"| Aug
-! style="background:#e5afaa; color:#000;"| Sep
-! style="background:#e5afaa; color:#000;"| Okt
-! style="background:#e5afaa; color:#000;"| Nov
-! style="background:#e5afaa; color:#000;"| Des
-|-
-! style="background:#f8f3ca; color:#000; height:16px;"| Bridgeport
-| style="text-align:center; background:#f8f3ca; color:#000;"| 37/23
-| style="text-align:center; background:#f8f3ca; color:#000;"| 39/25
-| style="text-align:center; background:#f8f3ca; color:#000;"| 47/32
-| style="text-align:center; background:#f8f3ca; color:#000;"| 57/41
-| style="text-align:center; background:#f8f3ca; color:#000;"| 67/51
-| style="text-align:center; background:#f8f3ca; color:#000;"| 76/60
-| style="text-align:center; background:#f8f3ca; color:#000;"| 82/66
-| style="text-align:center; background:#f8f3ca; color:#000;"| 81/65
-| style="text-align:center; background:#f8f3ca; color:#000;"| 74/58
-| style="text-align:center; background:#f8f3ca; color:#000;"| 63/46
-| style="text-align:center; background:#f8f3ca; color:#000;"| 53/38
-| style="text-align:center; background:#f8f3ca; color:#000;"| 42/28
-|-
-! style="background:#c5dfe1; color:#000; height:16px;"| Hartford
-| style="text-align:center; background:#c5dfe1; color:#000;"| 34/17
-| style="text-align:center; background:#c5dfe1; color:#000;"| 38/20
-| style="text-align:center; background:#c5dfe1; color:#000;"| 48/28
-| style="text-align:center; background:#c5dfe1; color:#000;"| 60/38
-| style="text-align:center; background:#c5dfe1; color:#000;"| 72/48
-| style="text-align:center; background:#c5dfe1; color:#000;"| 80/57
-| style="text-align:center; background:#c5dfe1; color:#000;"| 85/62
-| style="text-align:center; background:#c5dfe1; color:#000;"| 82/61
-| style="text-align:center; background:#c5dfe1; color:#000;"| 74/52
-| style="text-align:center; background:#c5dfe1; color:#000;"| 63/41
-| style="text-align:center; background:#c5dfe1; color:#000;"| 51/33
-| style="text-align:center; background:#c5dfe1; color:#000;"| 39/23
-|-
+| colspan="13" style="text-align:center;font-sise:120%;background-color:#E8EAFA;"|Måndelikse höygste en döärsneyde temperature in twey städen (in °F).
+|- style="background-color:#e5afaa; color:#000;"
+! style="height:17px;"| Stad
+! Jan || Feb || Mar || Apr || Mei || Jun || Jul || Aug || Sep || Okt || Nov || Des
+|- style="background-color:#f8f3ca; color:#000;text-align:center"
+! style="text-align:left;height:16px;"| Bridgeport
+| 37/23
+| 39/25
+| 47/32
+| 57/41
+| 67/51
+| 76/60
+| 82/66
+| 81/65
+| 74/58
+| 63/46
+| 53/38
+| 42/28
+|- style="background-color:#c5dfe1; color:#000"
+! style="text-align:left;height:16px;"| Hartford
+| 34/17
+| 38/20
+| 48/28
+| 60/38
+| 72/48
+| 80/57
+| 85/62
+| 82/61
+| 74/52
+| 63/41
+| 51/33
+| 39/23
 |}
 
-{{Verenigde Ståten}}
+{{Verenigde Stoaten}}
 
-[[Kategory:Twents artikel]]
-[[Kategory:Staoten van Amerika]]
+[[Kategorie:Tweants artikel]]
+[[Kategorie:Staoten van Amerika]]
