--- a/Costa_del_Sol.mw
+++ b/Costa_del_Sol.mw
@@ -14,6 +14,7 @@ De Costa del Sol is staark [[urbanisaotie|urbaniseerd]], mit n wiede baand van g
 == Boetende hìnwiezen ==
 * [http://www.visitcostadelsol.com/indexeng.htm# Costa del Sol Toeristenburo]
 * [http://www.alicante-spain.com/costa-del-sol/index.html Steden om en bie de Costa del Sol]
+* [https://costa-del-sol-life.com Costa del Sol Life]
 
 {{Kost van Spanje}}
 
