--- a/Wout_Brama.mw
+++ b/Wout_Brama.mw
@@ -4,7 +4,7 @@
 
 == loopbaan ==
 === Jeugnd ===
-Brama begun met voetballen bie de plaatselike voetbalverenige [[PH Almelo]]. Noa negen joar doar evoetbald te hebben, wör hee oontdekt duur [[FC Tweante]]. Doo at he 12 joar was, gung he noar FC Tweante, woer't he de jeugndopleaidige volgen töt de A1-groep. In zin leste jeugndjoar oonderskreef hee t kontrakt vuur 3 joar te voetballen bie FC Tweante. Doarnöast köm he in 2005 direks in t eerste van Tweante.<ref>[http://www.fctwente.nl/nieuws/archief/index.php?item=1985 Dreejarig kontrakt Brama], [[FC Twente|www.fctwente.nl]], [[18 meert|18 meart]] [[2005]]</ref>
+Brama begun met voetballen bie de plaatselike voetbalverenige [[PH Almelo]]. Noa negen joar doar evoetbald te hebben, wör hee oontdekt duur [[FC Tweante]]. Doo at he 12 joar was, gung he noar FC Tweante, woer't he de jeugndopleaidige volgen töt de A1-groep. In zin leste jeugndjoar oonderskreef hee t kontrakt vuur 3 joar te voetballen bie FC Tweante. Doarnöast köm he in [[2005]] direks in t eerste van Tweante.<ref>[http://www.fctwente.nl/nieuws/archief/index.php?item=1985 Dreejarig kontrakt Brama], [[FC Twente|www.fctwente.nl]], [[18 meert|18 meart]] [[2005]]</ref>
 
 === FC Tweante ===
 In [[2005]] köm he as middelveelder oonder [[Rini Coolen]] in t eerste. Hee spölden det seizoen 29 kompetisiewedstrieden. Oonderwiel skeaiden Rini Coolen der met oet, en nöm t [[Jan van Staa]] oawer. In de twee joaren doarnoa was he vuural invalspöller, umdet dootieds [[Karim El Ahmadi]] duurbreuk, en dus völ mocht spöllen. Hee oonderskreef skoonwal in 2006/07 wier n kontrakt wat um töt 2010 an FC Tweante zol beenden.<ref>[http://www.fctwente.nl/nieuws/archief/index.php?item=5667 Contracten Brama en Gerritsen verlengd], [[FC Twente|www.fctwente.nl]], [[26 september]] [[2006]]</ref> In 2008/09 köm n [[Verienigd Keuninkriek|Engelsen]] trainer [[Steve McLaren]] an bie Tweante, woervan't Brama ne vaste plek kreeg op t veeld in de vuurroondes van de [[UEFA Champions League|Champions League]].
