--- a/FC_Tweante.mw
+++ b/FC_Tweante.mw
@@ -4,7 +4,7 @@
 Op [[2 mei]] [[2010]] wör FC Tweante vuur t eerst in de geskiedenisse laandskampioen van Neerlaand, duur te winn van [[NAC]] oet [[Breda]] met 2-0. n [[8 mei|8sten mei]] [[2011]] wunn ze n beker van [[Ajax Amsterdam|AFC Ajax]], duur met 3-2 te winn. n [[30 juli|30sten juli]] wunn ze nog s van Ajax met 2-1, noen veur de Johan Cruijff Schale.
 
 == Ontstoan ==
-FC Tweante is ontstoan in 1965 oet nen saamngoan van de vrogere [[Sportclub Enschede]] en de [[Enschedese Boys]]. Doar deedn ze al wal völle lenger oawer, mear t köm dr nooit van. Doew at t slechter gung met beaide voetbalvereniges, beent ze op [[13 april]] saamn verdan egoan oonder n naamn ''FC Tweante'', den at al op [[11 februoari]] ekeuzn wör.
+FC Tweante is ontstoan in [[1965]] oet nen saamngoan van de vrogere [[Sportclub Enschede]] en de [[Enschedese Boys]]. Doar deedn ze al wal völle lenger oawer, mear t köm dr nooit van. Doew at t slechter gung met beaide voetbalvereniges, beent ze op [[13 april]] saamn verdan egoan oonder n naamn ''FC Tweante'', den at al op [[11 februoari]] ekeuzn wör.
 
 == Oonderkomns ==
 Tweante spölt de thoeswedstriedn in de [[Grolsch Veste]], den at vroger t Arkestadion heetn en doarveur spöllen ze in et Diekmanstadion. Et Arkestadion wör op 1 mei [[1998]] lös edoan en dr kon eerst 13.500 man in, mear later wör det terugge ebracht noar 13.250. Seend seizoen [[2008]]/[[2009]] is dr nen tweedn reenk bie boawnop ezat, zodet dr non 24.000 man in kan.
