--- a/SC_Heerenveen.mw
+++ b/SC_Heerenveen.mw
@@ -6,7 +6,7 @@ Tussen [[1941]] en [[1951]] wodde de klup negen keer noordelik kampioen. Dit was
 
 In 1989/90 promoveerde Et Vene naor de hoogste kompetisie van et Nederlaanse voetbal. Nao een hiel min eerste seizoen in de eredivisie volgde de degradaosie naor de eerste divisie. Onder [[Foppe de Haan]] promoveerde de klup in et seizoen 1993/94 weeromme naor de eredivisie. Sund die tied bin ze niet meer degradeerd.
 
-Et Vene het ok drie keer de finale van de [[KNVB-beker]] speuld. De eerste keer doe Et Vene in de finale kwam, speulde de klup nog in de eerste divisie. De eerste bekerfinale speulde Et Vene tegen [[AFC Ajax]] en verleurde de wedstried mit 6-2. De twiede bekerfinale was tegen [[Roda JC]] in [[1997]]. Et Vene verleur de wedstried mit 4-2. De dadde keer bekerfinale van Et Vene was in 2009 tegen [[FC Twente]]. Et Vene won de wedstried nao strafschoppen mit 5-4 (eindstaand 2-2).
+Et Vene het ok drie keer de finale van de [[KNVB-beker]] speuld. De eerste keer doe Et Vene in de finale kwam, speulde de klup nog in de eerste divisie. De eerste bekerfinale speulde Et Vene tegen [[AFC Ajax]] en verleurde de wedstried mit 6-2. De twiede bekerfinale was tegen [[Roda JC]] in [[1997]]. Et Vene verleur de wedstried mit 4-2. De dadde keer bekerfinale van Et Vene was in [[2009]] tegen [[FC Twente]]. Et Vene won de wedstried nao strafschoppen mit 5-4 (eindstaand 2-2).
 
 == Weblinks ==
 * [http://www.sc-heerenveen.nl/ Website van SC Heerenveen]
