--- a/Sportclub_Enschede.mw
+++ b/Sportclub_Enschede.mw
@@ -1,6 +1,6 @@
 [[Ofbeelding: Enschede tegen Ajax 3-3, vlnr Odenthal, keeper Nijhui Abe en Henk Groot, Bestanddeelnr 911-0710.jpg|thumb|right|SC Enschede-[[Ajax Amsterdam|Ajax]], maart 1960, 3-3]]
 
-'''Sportclub Enschede''' is ne [[Neerland|Neerlaandse]] [[voetbal|voetbalverenige]] uut [[Eanske]]. ''Sportclub'' is opricht in 1910. In 1965 goat ze saam  met [[Enschedese Boys]] om [[FC Twente]] op te rich. ''Sportclub'' goat verder as amateurclub.
+'''Sportclub Enschede''' is ne [[Neerland|Neerlaandse]] [[voetbal|voetbalverenige]] uut [[Eanske]]. ''Sportclub'' is opricht in 1910. In [[1965]] goat ze saam  met [[Enschedese Boys]] om [[FC Twente]] op te rich. ''Sportclub'' goat verder as amateurclub.
 In 1926 wör ''SC Enschede''  laandskampioen van Neerlaand.
 
 ''Sportclub'' spealde vröger in 't [[Diekmanstadion]], maar sinds ze amateurvoetbal speelt, speelt ze in 'n klein stadion op 'Sportpark Het Diekman'.
