--- a/UEFA_Champions_League.mw
+++ b/UEFA_Champions_League.mw
@@ -1,6 +1,6 @@
 De '''UEFA Champions League''' (oawerzat as ''Kampioensliga'') is een joarliks wedstriedverbaand vuur [[vootbal]]. Et wörd op ezat duur de [[Union of European Football Associations]] (kortweg UEFA). Metdoon köant eankel [[Europa (werelddeel)|Europese]] vootbalvereniges dee as in öar laand kampioen ewörden zeent. van wat laanden magt ook de een noa beste (en mangs zelfs twee noa beste) klubs metdoon. Op de wearld wörd et ezeen as ene van de meest belangrieke klubwedstrieden. In Europa hef et et heugste anzeen.
 
-De finale van 2012 en 2013 was de meest bekekken UEFA Kampioenskopsfinale töt non too. Doarnöast was et met 360 miljoen tellevisiekiekers et meest bekekken joarlikse [[sport]]geburen van de wearld in 2013.
+De finale van [[2012]] en [[2013]] was de meest bekekken UEFA Kampioenskopsfinale töt non too. Doarnöast was et met 360 miljoen tellevisiekiekers et meest bekekken joarlikse [[sport]]geburen van de wearld in 2013.
 
 In [[1992]] wör de UEFA Champions League invoord as vervanging van de European Champion Club's Cup, of kortweg European Cup. Dit wedstriedverbaand was seend [[1955]] in gebroekt. Der wör ne groepsfase bie edoan en der konnen meardere clubs oet bepoalde laanden metdoon. Vuur 1992 was et ne rechtlienige ofvalstried, woer as eankeld de kampioen van ieder laand an metdoon kon. In de negentiger joaren wör et format wat oetbreaidt, woerbie as der ne groepsfase in [[toernooi]]vörm bie köm. Doarduur konden een antal tweede klubs van bepoalde laanden metdoon. De meeste Europese laanden köant eankel öaren kampioen steuren. De stoarkste Europese liga's köant non töt wal veer manskappen steuren en vanof et [[2015]]-[[2016|16]] seizoen wal viewe. Klubs dee as tweedes wordt in de heugste divisie van öar laand, köant dan in de [[UEFA Europa League]] metdoon.
 
@@ -9,6 +9,7 @@ In hudigen vörm vaank de UEFA Champions League half [[augustus]] an. Doarbie ze
 [[Real Madrid]] hef et wedstriedverbaand et vaakste wunnen. Ze hebt den beker elf moal met noar thoes enömmen en det begun al in de eerste vief seizoenen. [[Spanje|Spaanse]] klubs hebt et vaakste wunnen (16x), met doarnoa [[Engelaand]] en [[Italië]] (beaide 12 moal). De UEFA Champions League is duur 22 verskillende klubs ewunnen, woervan as der 12 um mear as een moal wunnen hebt. Seend as et toernooi van naam en indeling is veraanderd in 1992, hef nog ginenen klub ne vaker as een moal achter mekoar ewunnen. [[AC Milan]] wussen as leste klub öaren titel vaste te hoolden tusken [[1989]] en [[1990]].
 
 De hudige kampioen is [[Real Madrid]]. Zee haalden öaren elfden titel binnen duur [[Atletico Madrid]] noa strafsköppe te versloan in [[2016]].
+
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Voetbal]]
 [[Kategorie: Wedstried]]
